# uni-calc

./: Cargo.toml  README.md
src/: eval.rs  lexer.rs  main.rs  parser.rs
