[package]
name = "calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.12"
thiserror = "1.0.57"
